Iscat The Beyblade update (actually reworking some stuff moving around restructuring etc)